# cabal-plan-bounds

./: CHANGELOG.md  LICENSE  README.md  build-all.sh  cabal-plan-bounds.cabal  cabal.project  shell.nix
.github/workflows/: ci.yaml
ci-configs/: ghc-8.10.7.config  ghc-9.0.2.config  ghc-9.10.1.config  ghc-9.2.4.config  ghc-9.2.5.config  ghc-9.4.4.config  ghc-9.6.1.config  ghc-9.8.1.config  stackage-nightly.config  upper-bounds.config
src/: Main.hs  ReplaceDependencies.hs  cabal-force-upper-bound.hs  cabal-plan-bounds.hs
