cabal-version:      3.0
name:               cabal-plan-bounds
version:            0.1
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Joachim Breitner
maintainer:         mail@joachim-breitner.de
-- copyright:
category:           Distribution
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cabal-plan-bounds
    import:           warnings
    main-is:          Main.hs
    other-modules:    ReplaceDependencies
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0 || ^>=4.15.1.0 || ^>=4.16.3.0 || ^>=4.17.0.0,
                      Cabal-syntax ^>=3.6.0.0 || ^>=3.8.1.0,
                      cabal-plan ^>=0.7.2.3,
                      optparse-applicative ^>=0.17.0.0,
                      containers ^>=0.6.4.1,
                      text ^>=1.2.4.1 || ^>=2.0.1
    build-depends:   bytestring ^>=0.10.12.0 || ^>=0.11.3.1
    build-depends:
    hs-source-dirs:   src/
    default-language: Haskell2010
