cabal-version:      3.0
name:               cabal-plan-bounds
version:            0.1.5
synopsis:           Derives cabal bounds from build plans
description:
  Manually curated dependency version ranges tend to become a lie: They likely
  include versions of your the dependencies that are neither longer tested by your CI
  system, or implied by compatibility with the tested versions.

  So the conclusion must be to __not write build-depends ranges by hand!__
  Which is an unpleaseant chore instead.

  Instead, __derive the build-depends from your actual CI builds!__

  This tool helps with that. See the README for more information.

license:            BSD-2-Clause
license-file:       LICENSE
author:             Joachim Breitner
maintainer:         mail@joachim-breitner.de
homepage:           https://github.com/nomeata/cabal-plan-bounds
copyright:          2023
category:           Distribution
build-type:         Simple
extra-doc-files:    README.md CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cabal-plan-bounds
    import:           warnings
    main-is:          cabal-plan-bounds.hs
    other-modules:    ReplaceDependencies
    build-depends:    base ^>=4.14.3 || ^>=4.15.1 || ^>=4.16.3 || ^>=4.17.0 || ^>=4.18.0,
                      bytestring ^>=0.10.12 || ^>=0.11.3 || ^>=0.12.0,
                      containers ^>=0.6.4,
                      text ^>=1.2.4 || ^>=2.0.1,
                      Cabal-syntax ^>=3.8.1 || ^>=3.10.1,
                      cabal-plan ^>=0.7.2,
                      optparse-applicative ^>=0.17.0 || ^>=0.18.1,
                      pretty ^>=1.1.3
    hs-source-dirs:   src/
    default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/nomeata/cabal-plan-bounds
